CARLI-1228 Fix the purchased checkmark icon alignment and size.

--- a/browserClient/carliApp/components/entityForms/product/_editProduct.scss
+++ b/browserClient/carliApp/components/entityForms/product/_editProduct.scss
@@ -31,6 +31,14 @@
     .column.purchased {
         flex: 0 0 90px;
         padding: 4px;
+        text-align: center;
+    }
+
+    span.purchased {
+        @include font-size(22);
+        .fa {
+            vertical-align: baseline;
+        }
     }
 
     label {
